[chores] Fixed logo margin on small screens

--- a/openwisp_utils/admin_theme/static/admin/css/openwisp.css
+++ b/openwisp_utils/admin_theme/static/admin/css/openwisp.css
@@ -1331,7 +1331,6 @@ h1#site-name {
   }
   h1#site-name {
     padding: 0;
-    margin-left: 10px;
   }
 
   #site-name a {
